@@ -59,6 +59,7 @@ ResourceSetFactory_ignoredOverrides = Several overrides are contributed for the 
 ResourceSyncClientNotifier_actionName = ResourceSyncClient notification
 ResourceUtil_backupFileAlreadyExists = the file already exists
 ResourceUtil_backupFileTask = Backup and refresh workspace
+Interpreter_evaluationError = Error while evaluating expression
 ServiceInterpreter_invalidReceiver = The receiver of the service call {0} is not an EObject (it is a {1})
 ServiceInterpreter_javaClassNotFound = Could not find Java extension class {0}
 ServiceInterpreter_unknownService = Unknown service "{0}"
